# game123

./: .gitignore  Cargo.toml  README.md  flake.nix  shell.nix
assets/: .mobs.png-autosave.kra  .person.png-autosave.kra  assets.json  assets.yaml  iso.png~  person.png~
data/: body_templates.yaml  templates.yaml
data/gfx/: assets.yaml
doc/: DESIGN.md
lib/rationals/: Cargo.toml
lib/rationals/src/: lib.rs
src/: components.rs  entities.rs  items.rs  main.rs  map.rs  mob.rs  player.rs  resources.rs  ui.rs
src/systems/: error.rs  fov_compute.rs  health.rs  input.rs  memory.rs  mod.rs  move  move_player.rs  movement.rs  pathfinding.rs  pickup.rs  render.rs
src/tests/: error.rs  map.rs  mod.rs
src/tests/error/: error.rs
