[package]
name = "game123"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hecs = "*"
random = "0.14.0"
tetra = "0.8"
serde = { version = "1.0.107", features = ["derive"] }
serde_json = "1.0.107"

[profile.release]
strip = true
lto = true

[profile.prof]
inherits = "dev"
opt-level = 3

[profile.dev]
strip = false
lto = false
debug = true