workspace = { members = ["lib/rationals"] }
[package]
name = "game123"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hecs = { version = "0.10.4", features = ["macros"]}
# tetra = "0.8"
serde = { version = "1.0.107", features = ["derive"] }
serde_json = "1.0.107"
# egui-tetra = { git = "https://github.com/Nuxssss/egui-tetra", rev = "931ed05" }
anyhow = "*"
libc = "0.2.149"
rationals = { path = "./lib/rationals" }
thiserror = "1.0.57"
serde_yaml = "0.9.32"
pathfinding = "4.9.1"
macroquad = "0.4.5"
vek = "0.17.0"
rand = "0.8.5"

[profile.release]
strip = true
lto = true
overflow-checks = false

[profile.prof]
inherits = "dev"
overflow-checks = false
opt-level = 1

[profile.dev]
strip = false
lto = false
debug = true
